--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,5 +1,5 @@
 site:
-  name: AstroWind
+  name: IT Contract Monitor
   site: 'https://astrowind.vercel.app'
   base: '/'
   trailingSlash: false
@@ -9,14 +9,14 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
+    default: IT Contract Monitor
+    template: '%s — ITCM'
   description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: ITCM
     images:
       - url: '~/assets/images/default.png'
         width: 1200
@@ -69,4 +69,5 @@ analytics:
       id: null # or "G-XXXXXXXXXX"
 
 ui:
-  theme: 'system' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
+  theme: 'system'
+  # theme: 'system' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
